@@ -332,7 +332,6 @@ __PACKAGE__->has_many(
 # Created by DBIx::Class::Schema::Loader v0.07036 @ 2014-02-28 12:00:59
 # DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:30KwQYdLD+H3KvJKLf9OxQ
 
-# Author:        david.jackson@sanger.ac.uk
 # Created:       2010-04-08
 
 our $VERSION = '0';
@@ -403,7 +402,6 @@ sub _tag_rs {
     return $self->result_source->schema->resultset('Tag')->new( {} );
 }
 
-
 =head2 _user_rs
 
 Create a dbic User result set as shorthand and to access the row validation
@@ -416,7 +414,6 @@ sub _user_rs {
 
     return $self->result_source->schema->resultset('User')->new( {} );
 }
-
 
 =head2 current_run_status_description
 
@@ -448,21 +445,21 @@ sub current_run_status {
   return $self->run_statuses()->search({iscurrent => 1})->first(); #not nice - would like this defined by a relationship
 }
 
-
-
 =head2 update_run_status
 
-If appropriate, creates a new run status for this run and,
-if appropriate, marks this status as current and all the
-previous statuses as not current.
-
-For a new current status a new event row is created and, if appropriate,
-instrument status changed. In some cases, the run status is automatically
-advanced one step further.
+Creates a new run status for this run and, if appropriate, marks this
+status as current and all the previous statuses as not current.
 
 The description of the status is required.
 
     $run_row->update_run_status('some status');
+
+if there exists a status with this description that has
+the same timestamp or is current and has an earlier timestamp
+
+For a new current status a new event row is created and, if appropriate,
+instrument status gets changed. In some cases, the run status is automatically
+advanced one step further.
 
 An optional username can be supplied. If omitted, the pipeline user is
 assumed
@@ -487,36 +484,28 @@ sub update_run_status {
         croak '"date" argument should be a DateTime object';
     }
 
+    if ($self->status_is_duplicate($description, $date)) {
+      return;
+    }
+
+    my $current_status_rs = $self->related_resultset( q{run_statuses} )->search(
+              { iscurrent => 1,},
+              { order_by => { -desc => 'date'},},
+    );
+
+    my $current_status_row = $current_status_rs->next;
+    my $make_new_current = $self->current_status_is_outdated($current_status_row, $date);
+
     my $use_pipeline_user = 1;
     my $user_id = $self->get_user_id($user_identifier, $use_pipeline_user);
-    my $rsd_row = $self->get_status_dict_row('RunStatusDict', $description);
-
-    # Do nothing if the run_status is already set and current.
-    my $current_status_rs = $self->related_resultset( q{run_statuses} )->search(
-             { iscurrent   => 1,},
-             { order_by    => { -desc => 'date'},},
-    );
-    my $current_status_row = $current_status_rs->next;
-    if ($current_status_row && $current_status_row->description eq $description) {
-        return;
-    }
-
-    # If current status is later that the new one, do not make the new one current
-    my $make_new_current = 1;
-
-    if ($current_status_row &&
-          $current_status_row->date->subtract_datetime($date)->is_positive ) {
-        $make_new_current = 0;
-    }
 
     # Use transaction in case iscurrent flag has to be reset
     my $transaction = sub {
-        if ($current_status_row && $make_new_current) {
+        if ($current_status_row && $make_new_current) {                               
             $current_status_rs->update_all( {iscurrent => 0} );
         }
-
         return $self->related_resultset( q{run_statuses} )->create( {
-                run_status_dict    => $rsd_row,
+                run_status_dict    => $self->get_status_dict_row('RunStatusDict', $description),
                 date               => $date,
                 iscurrent          => $make_new_current,
                 id_user            => $user_id,
@@ -653,7 +642,6 @@ sub _map_opposed_tags {
     return;
 }
 
-
 =head2 _set_mutually_exclusive_tags
 
 Some tags are paired and mutually exclusive (paired_end/single_end,
@@ -705,7 +693,6 @@ sub _set_mutually_exclusive_tags {
     return;
 }
 
-
 =head2 set_tag
 
 General method for setting/creating TagRun rows.
@@ -748,7 +735,6 @@ sub set_tag {
     return;
 }
 
-
 =head2 unset_tag
 
 General method for unsetting TagRun rows. It won't complain if the tag was
@@ -786,7 +772,6 @@ sub unset_tag {
     return $record->delete();
 }
 
-
 =head2 is_tag_set
 
 Test whether a suppled tag (db id or text) is set for the run. Returns 0 if
@@ -811,7 +796,6 @@ sub is_tag_set {
         )->count();
 }
 
-
 =head2 forward_read
 
 Get RunRead corresponding to the forward read.
@@ -822,7 +806,6 @@ sub forward_read {
     my ($self) = @_;
     return $self->runs_read->find({read_order=>1});
 }
-
 
 =head2 reverse_read
 
@@ -886,7 +869,7 @@ Result class definition in DBIx binding for npg tracking database.
 
 =head1 AUTHOR
 
-Marina Gourtovaia E<lt>mg8@sanger.ac.ukE<gt>
+David Jackson E<lt>david.jackson@sanger.ac.ukE<gt>
 
 =head1 LICENSE AND COPYRIGHT
 
