@@ -1,5 +1,9 @@
 CHANGES
 
+ - DBIx run and run-lane status update: ensure duplicate records are not created
+     allow to create a record for a status that is already current if the date
+     of the new record is earlier that the current status date
+
 release 77.9
  - DBIx run and run-lane status update refactoring to accommodate passing
      status date and make setting these two status types symmetrical
